--- a/src/sass/components/_index.sass
+++ b/src/sass/components/_index.sass
@@ -2,4 +2,8 @@
 @import home/index
 @import login/index
 @import forgot-password/index
+@import influencer/index
+@import brand/index
+@import pop-up-congratulation
+@import dashboard/dashboard
 @import footer
