--- a/src/sass/components/forgot-password/_forgot-password.sass
+++ b/src/sass/components/forgot-password/_forgot-password.sass
@@ -7,15 +7,27 @@
         display: flex
         flex-direction: column
         align-items: center
+        +sm
+            min-height: auto
+            margin-bottom: rem(20px)
     &__title
         margin-bottom: rem(95px)
+        +sm
+            margin-bottom: rem(30px)
     &__form
         margin-bottom: rem(65px)
+        +sm
+            margin-bottom: rem(45px)
     &__form-group
         margin-bottom: rem(73px)
+        +sm
+            margin-bottom: rem(30px)
     &__submit
         text-align: center
     &__text
         max-width: rem(485px)
         font-size: rem(22px)
         line-height: 1.45
+        +sm
+            font-size: rem(16px)
+            max-width: rem(350px)
