--- a/src/templates/forgot-password.html
+++ b/src/templates/forgot-password.html
@@ -7,7 +7,7 @@ title: Index page
 
 	
 	{# Start header #}
-	{% include "partials/_header.html" %}
+	{{header.block(false)}}
 	{# END header #}
 
 	{# Start forgot-password #}
