--- a/src/templates/influencer.html
+++ b/src/templates/influencer.html
@@ -10,9 +10,9 @@ title: Index page
 	{{header.block(false)}}
 	{# END header #}
 
-	{# Start login #}
-	{% include "partials/login/_login.html" %}
-	{# END login #}
+	{# Start influencer #}
+	{% include "partials/influencer/_influencer.html" %}
+	{# END influencer #}
 
 
 
