--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -11,22 +11,31 @@ body
         font-weight: 700
     &_xxl
         font-size: rem(21px)
+        +sm
+            font-size: rem(18px)
     &_xl
         font-size: rem(20px)
+        +r(1439)
+            font-size: rem(16px)
     &_m
         font-size: rem(18px)
     &_xs
         font-size: rem(14px)
-.btn_xl
-    +r(1439)
-        font-size: rem(16px)
+    &_popup
+        font-size: rem(19px)
+        line-height: 1
+        padding: rem(12px 35px)
+        +sm
+            font-size: rem(16px)
+            padding: rem(10px 25px)
+    
 
 .width173
     width: rem(173px)
     +r(1439)
         width: rem(120px)
 .width192
-        width: rem(192px)
+    width: rem(192px)
 .width197
     width: rem(197px)
 .width212
@@ -35,6 +44,8 @@ body
     width: rem(270px)
 .width309
     width: rem(309px)
+    +sm
+        width: rem(250px)
 
 .branded-list
     &__item
