--- a/src/sass/components/_header.sass
+++ b/src/sass/components/_header.sass
@@ -1,6 +1,6 @@
 .header
-    position: fixed
     width: 100%
+    position: absolute
     z-index: 5
     &__wrap
         padding: rem(50px 30px 23px)
@@ -9,6 +9,8 @@
             padding-top: rem(25px)
         +sm
             padding-top: rem(15px)
+    &_fixed
+        position: fixed
 .logo
     max-width: rem(210px)
     float: left
@@ -32,8 +34,6 @@
         display: flex
         align-items: center
     &__item
-        position: relative
-        overflow: hidden
         &:not(:last-child)
             margin-right: rem(60px)
             +r(1439)
@@ -42,11 +42,15 @@
             color: $white
             text-decoration: none
         &:hover
-            &:after
+            .menu-main__text:after
                 // opacity: 1
                 // visibility: visible
                 // transform: translateX(0)
                 animation: moveIn .3s cubic-bezier(.17,.67,1,.64) forwards
+    &__text
+        position: relative
+        overflow: hidden
+        display: block
         &:after
             content: ""
             position: absolute
@@ -63,9 +67,11 @@
             animation: moveOut .3s ease-in-out
             +r(1439)
                 height: rem(5px)
-
+    &__link
+        position: relative
+        display: block
     .is-active
-        &:after
+        .menu-main__text:after
             // opacity: 1
             // visibility: visible
             z-index: -1
@@ -79,7 +85,7 @@
     +md
         display: none
     .btn-color-white
-            margin-right: rem(68px)
+            margin-right: rem(60px)
             +r(1439)
                 margin-right: rem(10px)
 .signup
@@ -277,6 +283,53 @@ $h: rem(3px)
             animation: moveOut .3s ease-out
             +r(1439)
                 height: rem(5px)
+
+.counter
+    display: block
+    position: absolute
+    width: rem(16px)
+    height: rem(16px)
+    border-radius: 50%
+    background-color: $primary
+    font-size: rem(11px)
+    top: rem(-19px)
+    right: rem(-11px)
+    text-align: center
+    line-height: rem(16px)
+    vertical-align: middle
+
+.account
+    float: right
+    display: flex
+    align-items: center
+    &__name
+        position: relative
+        font-size: rem(20px)
+        font-weight: 700
+        margin-right: rem(20px)
+        padding-right: rem(26px)
+    &__icon
+        position: absolute
+        width: rem(12px)
+        box-sizing: intial
+        border: 6px solid transparent
+        border-top-color: $white
+        right: 0
+        top: rem(10px)
+    &__logo
+        width: rem(50px)
+        height: rem(50px)
+        border-radius: 50%
+        overflow: hidden
+        display: flex
+        align-items: center
+        justify-content: center
+        img
+            display: block
+            width: 100%
+    &__details
+        position: absolute
+        bottom: 0
 
 
 
