--- a/src/templates/page.html
+++ b/src/templates/page.html
@@ -7,7 +7,7 @@ title: Index page
 
 	
 	{# Start header #}
-	{% include "partials/_header.html" %}
+	{{header.block(true)}}
 	{# END header #}
 
 	{# Start main-slider #}
