--- a/src/templates/partials/forgot-password/_forgot-password.html
+++ b/src/templates/partials/forgot-password/_forgot-password.html
@@ -21,19 +21,9 @@
                         </p>
                     </div>
                 </div>
-                <div class="login__social side-social">
-                    <div class="login__social-title side-social__title">
-                        Follow Me On
-                    </div>
-                    <div class="social side-social__list">
-                        <a href="#" class="social__item side-social__item">{{ mixins.icon("youtube") }}</a>
-                        <a href="#" class="social__item side-social__item">{{ mixins.icon("facebook") }}</a>
-                        <a href="#" class="social__item side-social__item">{{ mixins.icon("twitter") }}</a>
-                    </div>
-                </div>
             </div>
             {# Start footer #}
-            {% include "partials/_footer.html" %}
+            {{footer.block(true)}}
             {# END footer #}
         </div>
     </div>
