added dashboard page

--- a/src/sass/_layouts.sass
+++ b/src/sass/_layouts.sass
@@ -5,3 +5,6 @@
     padding: rem(0 30px)
     +sm
         padding: rem(0 15px)
+    &_lg
+        max-width: rem(1740px)
+        padding: rem(0 15px)
