finished dashboard page without adaptive

--- a/src/sass/bootstrap/_variables.scss
+++ b/src/sass/bootstrap/_variables.scss
@@ -10,7 +10,7 @@
 
 $white:    #fff !default;
 $gray-100: #f8f9fa !default;
-$gray-200: #e9ecef !default;
+$gray-200: #D5D5D5 !default; //changed MR
 $gray-300: #D8D8D8 !default; //changed MR
 $gray-400: #F0F0FB !default;//changed MR
 $gray-500: #E8E8E8 !default; //changed MR
