--- a/src/sass/components/home/_contacts.sass
+++ b/src/sass/components/home/_contacts.sass
@@ -120,6 +120,10 @@
             opacity: 1
             visibility: visible
             z-index: -1
+    &__col
+        +sm
+            display: flex
+            justify-content: center
     &__list
         display: flex
         flex-direction: column
