--- a/src/templates/partials/dashboard/_dashboard.html
+++ b/src/templates/partials/dashboard/_dashboard.html
@@ -54,7 +54,7 @@
                         <h5 class="chat__title">Welcome to Digiwad!</h5>
                         <div class="chat__interlocutor interlocutor">
                             <div class="interlocutor__img">
-                                <img src="./img/ghost.jpg" alt="avatar">
+                                <img src="./img/ghost@2x.jpg" alt="avatar">
                             </div>
                             <div class="interlocutor__name">
                                 DigiBot
@@ -62,6 +62,21 @@
                         </div>
                     </div>
                     <div class="chat__body">
+                        <div class="chat__message chat-message">
+                            <div class="chat-message__body">
+                                <p>
+                                        Hey test,<br>
+                                        <br>
+                                        We're thrilled to have you on FameBit. First things first, this is your home page. Think of it as mission control. Once you have launched a campaign we will notify you if you have new proposals and you'll have easy access to chat with any of the content creators you have hired.
+                                </p>
+                                <p>
+                                        Speaking of hiring content creators, it's time to <a href="#" class="chat-message__link">start a new campaign!</a>
+                                </p>
+                            </div>
+                            <div class="chat-message__img">
+                                <img src="./img/ghost@2x.jpg" alt="avatar">
+                            </div>
+                        </div>
                         <div class="chat__message chat-message chat-message_right">
                             <div class="chat-message__body">
                                 <p>
@@ -74,7 +89,7 @@
                                 </p>
                             </div>
                             <div class="chat-message__img">
-                                <img src="./img/ghost.jpg" alt="avatar">
+                                <img src="./img/ghost@2x.jpg" alt="avatar">
                             </div>
                         </div>
                     </div>
@@ -82,11 +97,11 @@
             </div>
         </div>
     </div>
-    <div class="dialogue-block">
+    <form class="dialogue-block">
         <div class="dialogue-block__header">
             <div class="dialogue-block__interlocutor interlocutor">
                 <div class="interlocutor__img dialogue-block__interlocutor-img">
-                    <img src="./img/ghost.jpg" alt="avatar">
+                    <img src="./img/ghost@2x.jpg" alt="avatar">
                 </div>
                 <div class="interlocutor__name dialogue-block__interlocutor-name">
                     DigiBot
@@ -96,34 +111,85 @@
             </div>
         </div>
         <div class="dialogue-block__body">
-            <div class="dialogue-block__message dialogue-message">
-                <div class="dialogue-message__row row no-gutters">
-                    <div class="dialogue-message__col col-2">
-                    </div>
-                    <div class="dialogue-message__col col">
-                        <div class="dialogue-message__details">
-                            <span class="dialogue-message__author">
-                                Digibot</span>, 
-                            <span class="dialogue-message__time">Yesterday 8:20 PM</span>
+            <div class="dialogue-block__body-wrap">
+                {% for item in [
+                    {
+                        img: "ghost@2x.jpg",
+                        author: "Digibot",
+                        time: "Yesterday 8:20 PM",
+                        text: "It was delicious!",
+                        inbox: true,
+                        readed: true
+                    },
+                    {
+                        img: "avatar.jpg",
+                        author: "Razer",
+                        time: "7:46 PM",
+                        text: "I did, our whole team rubbed it allll over their",
+                        inbox: false,
+                        readed: true
+                    },
+                    {
+                        img: "avatar.jpg",
+                        author: "Razer",
+                        time: "7:50 PM",
+                        text: "I did, our whole team rubbed it allll over their bread.",
+                        inbox: false,
+                        readed: false
+                    }
+                ] %}
+                    <div class="dialogue-block__message dialogue-message{% if item.inbox %} dialogue-message_inbox{% endif %}{% if item.readed %} dialogue-message_readed{% endif %}">
+                        <div class="dialogue-message__row row no-gutters">
+                            <div class="dialogue-message__col col-2">
+                            </div>
+                            <div class="dialogue-message__col col">
+                                <div class="dialogue-message__details">
+                                    <span class="dialogue-message__author">
+                                        {{ item.author }}</span>, 
+                                    <span class="dialogue-message__time">{{ item.time }}</span>
+                                </div>
+                            </div>
                         </div>
+                        <div class="dialogue-message__row row no-gutters">
+                            <div class="dialogue-message__col col-2">
+                                <div class="dialogue-message__img">
+                                    <img src="./img/{{ item.img }}" alt="avatar">
+                                <div class="online-indicator dialogue-message__indicator">
+                                </div>
+                                </div>
+                            </div>
+                            <div class="dialogue-message__col col">
+                                <span class="dialogue-message__text">
+                                    {{ item.text }}
+                                    <span class="dialogue-message__check">
+                                        {{ mixins.icon("check") }}
+                                    </span>
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+                {% endfor %}
+            </div>
+        </div>
+        <div class="dialogue-block__footer">
+            <div class="dialogue-block__row row">
+                <div class="dialogue-block__col col-9">
+                    <div class="form-group dialogue-block__form-group">
+                        <input type="text" autocomplete="off" class="form-control dialogue-block__input" placeholder="Message Digibot">
                     </div>
                 </div>
-                <div class="dialogue-message__row row no-gutters">
-                    <div class="dialogue-message__col col-2">
-                        <div class="dialogue-message__img">
-                            <img src="./img/ghost.jpg" alt="avatar">
-                        <div class="online-indicator dialogue-message__indicator">
-                        </div>
-                        </div>
-                    </div>
-                    <div class="dialogue-message__col col">
-                        <div class="dialogue-message__text">
-                            <span>It was delicious!</span>
-                        </div>
+                <div class="dialogue-block__col col">
+                    <div class="dialogue-block__btns">
+                        <button type="submit" class="dialogue-block__submit">
+                            {{ mixins.icon("send") }}
+                        </button>
+                        <div class="dialogue-block__divider"></div>
+                        <button type="button" class="dialogue-block__smileys">
+                            {{ mixins.icon("emojis") }}
+                        </button>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="dialogue-block__footer"></div>
-    </div>
+    </form>
 </div>
