fixed source for friend's logos

--- a/src/templates/partials/home/_friends.html
+++ b/src/templates/partials/home/_friends.html
@@ -22,7 +22,7 @@
 
                 <li class="friends__item col-md-4 col-sm-4 col-6">
                     <div class="logos-wrap">
-                        <img src="./img/svgo/{{item.logo}}" alt="logo">
+                        <img src="./img/{{item.logo}}" alt="logo">
                     </div>
                 </li>
                     
