--- a/src/sass/components/home/_contacts.sass
+++ b/src/sass/components/home/_contacts.sass
@@ -85,6 +85,8 @@
     &__logo
         width: rem(210px)
         margin-left: rem(-55px)
+        +r(1820)
+            margin-left: 0
         +r(1439)
             width: rem(150px)
             margin-left: 0
