--- a/src/templates/partials/dashboard/_dashboard.html
+++ b/src/templates/partials/dashboard/_dashboard.html
@@ -27,7 +27,7 @@
                             }
                             ] %}
                         <li class="chat__contact chat-contact">
-                            <div class="row chat-contact__row no-gutters">
+                            <div class="row chat-contact__row">
                                 <div class="chat-contact__col col-4">
                                     <div class="chat-contact__img">
                                         <img src="./img/{{ i.img }}" alt="avatar">
