--- a/src/sass/components/login/_login.sass
+++ b/src/sass/components/login/_login.sass
@@ -35,6 +35,12 @@
             font-size: rem(16px)
         +placeholder
             text-transform: uppercase
+        &:-webkit-autofill,
+        &:-webkit-autofill:hover,
+        &:-webkit-autofill:focus
+        &:-webkit-autofill
+            -webkit-text-fill-color: #fff !important
+            background-color: transparent !important
     &__forgot
         text-align: right
         width: 100%
