changed input type email to type text

--- a/src/templates/partials/influencer/_influencer.html
+++ b/src/templates/partials/influencer/_influencer.html
@@ -22,7 +22,7 @@
                         <div class="influencer__row form-row">
                             <div class="influencer__col col-sm-6">
                                 <div class="form-group influencer__form-group is-error">
-                                    <input type="email" autocomplete="off" class="form-control influencer__input input-dark" placeholder="e- mail">
+                                    <input type="text" autocomplete="off" class="form-control influencer__input input-dark" placeholder="e- mail">
                                     <span class="error-label">!</span>
                                 </div>
                             </div>
