--- a/src/templates/partials/login/_login.html
+++ b/src/templates/partials/login/_login.html
@@ -11,7 +11,7 @@
                     </div>
                     <form>
                         <div class="form-group login__form-group is-error">
-                            <input type="email" autocomplete="off" class="form-control login__input input-dark" placeholder="e- mail">
+                            <input type="text" autocomplete="off" class="form-control login__input input-dark" placeholder="e- mail">
                             <span class="error-label">!</span>
                         </div>
                         <div class="form-group login__form-group">
